--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   },
   "homepage": "https://github.com/zartosht/kickstart-web3#readme",
   "dependencies": {
+    "chance": "^1.1.9",
     "fs-extra": "^10.1.0",
-    "ganache-cli": "^6.12.2",
+    "ganache": "^7.5.0",
     "mocha": "^10.1.0",
     "solc": "^0.8.9",
     "web3": "^1.8.1"
