--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "compile": "node ethereum/compile.js"
+    "compile": "node ethereum/compile.js",
+    "deploy": "node ethereum/deploy.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,9 @@
   },
   "homepage": "https://github.com/zartosht/kickstart-web3#readme",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.1.2",
     "chance": "^1.1.9",
+    "dotenv": "^16.0.3",
     "fs-extra": "^10.1.0",
     "ganache": "^7.5.0",
     "mocha": "^10.1.0",
